--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : Emily Lu
 title_separator          : "-"
 name                     : Emily Lu
 description              : &description "personal description"
-url                      : https://emilylu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://rongyinglu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "rongyinglu/emilylu.github.io"
+repository               : "rongyinglu/rongyinglu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
