add my info to config file

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : Emily Lu
-  avatar           : "profile.png"
+  avatar           : "/images/head.png"
   bio              : 
   location         : Irvine
   employer         :
