add my info to config file

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : Emily Lu
-  avatar           : "images\head.jpg"
+  avatar           : "images/head.jpg"
   bio              : 
   location         : Irvine
   employer         :
