add my info to config file

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Research "
-    url: /Research/
+  - title: "Portfolio "
+    url: /portifolio/
         
   - title: "Blog Posts"
     url: /year-archive/
