add my info to config file

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /cv/
     
   - title: "Portfolio "
-    url: /portifolio/
+    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
