--- a/_config.yml
+++ b/_config.yml
@@ -175,11 +175,9 @@ kramdown:
 
 # Collections
 collections:
- 
-
   portfolio:
     output: true
-    permalink: /:collection/:path/
+    permalink: /portfolio/:path/
 
 
 # Defaults
